--- a/app/src/main/res/layout/fragment_amphibian_detail.xml
+++ b/app/src/main/res/layout/fragment_amphibian_detail.xml
@@ -38,7 +38,8 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Blue Jeans Frog"/>
+            tools:text="Blue Jeans Frog"
+            android:text="@{viewModel.amphibian.name.toString()}"/>
 
         <View
             android:layout_width="match_parent"
@@ -58,7 +59,9 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name"
-            tools:text="Bright red body, blue legs"/>
+            tools:text="Bright red body, blue legs"
+            android:text="@{viewModel.amphibian.description.toString()}"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
